lib/src/duckdb_bindings.dart


  late final _duckdb_table_function_set_initPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(duckdb_table_function,
              duckdb_table_function_init_t)>>('duckdb_table_function_set_init');
  late final _duckdb_table_function_set_init =
      _duckdb_table_function_set_initPtr.asFunction<
          void Function(duckdb_table_function, duckdb_table_function_init_t)>();

  void duckdb_table_function_set_local_init(
    duckdb_table_function table_function,
    duckdb_table_function_init_t init,
  ) {
    return _duckdb_table_function_set_local_init(
      table_function,
      init,
    );
  }

  late final _duckdb_table_function_set_local_initPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  duckdb_table_function, duckdb_table_function_init_t)>>(
      'duckdb_table_function_set_local_init');
  late final _duckdb_table_function_set_local_init =
      _duckdb_table_function_set_local_initPtr.asFunction<
          void Function(duckdb_table_function, duckdb_table_function_init_t)>();

  void duckdb_table_function_set_function(
    duckdb_table_function table_function,
    duckdb_table_function_t function,
  ) {
    return _duckdb_table_function_set_function(
      table_function,
      function,
    );
  }

  late final _duckdb_table_function_set_functionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(duckdb_table_function,
              duckdb_table_function_t)>>('duckdb_table_function_set_function');
  late final _duckdb_table_function_set_function =
      _duckdb_table_function_set_functionPtr.asFunction<
          void Function(duckdb_table_function, duckdb_table_function_t)>();

  void duckdb_table_function_supports_projection_pushdown(
    duckdb_table_function table_function,
    bool pushdown,
  ) {
    return _duckdb_table_function_supports_projection_pushdown(
      table_function,
      pushdown,
    );
  }

  late final _duckdb_table_function_supports_projection_pushdownPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(duckdb_table_function,
              ffi.Bool)>>('duckdb_table_function_supports_projection_pushdown');
  late final _duckdb_table_function_supports_projection_pushdown =
      _duckdb_table_function_supports_projection_pushdownPtr
          .asFunction<void Function(duckdb_table_function, bool)>();

  int duckdb_register_table_function(
    duckdb_connection con,
    duckdb_table_function function,
  ) {
    return _duckdb_register_table_function(
      con,
      function,
    );
  }

  late final _duckdb_register_table_functionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_connection,
              duckdb_table_function)>>('duckdb_register_table_function');
  late final _duckdb_register_table_function =
      _duckdb_register_table_functionPtr
          .asFunction<int Function(duckdb_connection, duckdb_table_function)>();

  ffi.Pointer<ffi.Void> duckdb_bind_get_extra_info(
    duckdb_bind_info info,
  ) {
    return _duckdb_bind_get_extra_info(
      info,
    );
  }

  late final _duckdb_bind_get_extra_infoPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(duckdb_bind_info)>>(
      'duckdb_bind_get_extra_info');
  late final _duckdb_bind_get_extra_info = _duckdb_bind_get_extra_infoPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(duckdb_bind_info)>();

  void duckdb_bind_add_result_column(
    duckdb_bind_info info,
    ffi.Pointer<ffi.Char> name,
    duckdb_logical_type type,
  ) {
    return _duckdb_bind_add_result_column(
      info,
      name,
      type,
    );
  }

  late final _duckdb_bind_add_result_columnPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(duckdb_bind_info, ffi.Pointer<ffi.Char>,
              duckdb_logical_type)>>('duckdb_bind_add_result_column');
  late final _duckdb_bind_add_result_column =
      _duckdb_bind_add_result_columnPtr.asFunction<
          void Function(
              duckdb_bind_info, ffi.Pointer<ffi.Char>, duckdb_logical_type)>();

  int duckdb_bind_get_parameter_count(
    duckdb_bind_info info,
  ) {
    return _duckdb_bind_get_parameter_count(
      info,
    );
  }

  late final _duckdb_bind_get_parameter_countPtr =
      _lookup<ffi.NativeFunction<idx_t Function(duckdb_bind_info)>>(
          'duckdb_bind_get_parameter_count');
  late final _duckdb_bind_get_parameter_count =
      _duckdb_bind_get_parameter_countPtr
          .asFunction<int Function(duckdb_bind_info)>();

  duckdb_value duckdb_bind_get_parameter(
    duckdb_bind_info info,
    int index,
  ) {
    return _duckdb_bind_get_parameter(
      info,
      index,
    );
  }

  late final _duckdb_bind_get_parameterPtr = _lookup<
          ffi.NativeFunction<duckdb_value Function(duckdb_bind_info, idx_t)>>(
      'duckdb_bind_get_parameter');
  late final _duckdb_bind_get_parameter = _duckdb_bind_get_parameterPtr
      .asFunction<duckdb_value Function(duckdb_bind_info, int)>();

  void duckdb_bind_set_bind_data(
    duckdb_bind_info info,
    ffi.Pointer<ffi.Void> bind_data,
    duckdb_delete_callback_t destroy,
  ) {
    return _duckdb_bind_set_bind_data(
      info,
      bind_data,
      destroy,
    );
  }

  late final _duckdb_bind_set_bind_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(duckdb_bind_info, ffi.Pointer<ffi.Void>,
              duckdb_delete_callback_t)>>('duckdb_bind_set_bind_data');
  late final _duckdb_bind_set_bind_data =
      _duckdb_bind_set_bind_dataPtr.asFunction<
          void Function(duckdb_bind_info, ffi.Pointer<ffi.Void>,
              duckdb_delete_callback_t)>();

  void duckdb_bind_set_cardinality(
    duckdb_bind_info info,
    int cardinality,
    bool is_exact,
  ) {
    return _duckdb_bind_set_cardinality(
      info,
      cardinality,
      is_exact,
    );
  }

  late final _duckdb_bind_set_cardinalityPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(duckdb_bind_info, idx_t,
              ffi.Bool)>>('duckdb_bind_set_cardinality');
  late final _duckdb_bind_set_cardinality = _duckdb_bind_set_cardinalityPtr
      .asFunction<void Function(duckdb_bind_info, int, bool)>();

  void duckdb_bind_set_error(
    duckdb_bind_info info,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _duckdb_bind_set_error(
      info,
      error,
    );
  }

  late final _duckdb_bind_set_errorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(duckdb_bind_info,
              ffi.Pointer<ffi.Char>)>>('duckdb_bind_set_error');
  late final _duckdb_bind_set_error = _duckdb_bind_set_errorPtr
      .asFunction<void Function(duckdb_bind_info, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Void> duckdb_init_get_extra_info(
    duckdb_init_info info,
  ) {
    return _duckdb_init_get_extra_info(
      info,
    );
  }

  late final _duckdb_init_get_extra_infoPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(duckdb_init_info)>>(
      'duckdb_init_get_extra_info');
  late final _duckdb_init_get_extra_info = _duckdb_init_get_extra_infoPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(duckdb_init_info)>();

  ffi.Pointer<ffi.Void> duckdb_init_get_bind_data(
    duckdb_init_info info,
  ) {
    return _duckdb_init_get_bind_data(
      info,
    );
  }

  late final _duckdb_init_get_bind_dataPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(duckdb_init_info)>>(
      'duckdb_init_get_bind_data');
  late final _duckdb_init_get_bind_data = _duckdb_init_get_bind_dataPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(duckdb_init_info)>();

  void duckdb_init_set_init_data(
    duckdb_init_info info,
    ffi.Pointer<ffi.Void> init_data,
    duckdb_delete_callback_t destroy,
  ) {
    return _duckdb_init_set_init_data(
      info,
      init_data,
      destroy,
    );
  }

  late final _duckdb_init_set_init_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(duckdb_init_info, ffi.Pointer<ffi.Void>,
              duckdb_delete_callback_t)>>('duckdb_init_set_init_data');
  late final _duckdb_init_set_init_data =
      _duckdb_init_set_init_dataPtr.asFunction<
          void Function(duckdb_init_info, ffi.Pointer<ffi.Void>,
              duckdb_delete_callback_t)>();

  int duckdb_init_get_column_count(
    duckdb_init_info info,
  ) {
    return _duckdb_init_get_column_count(
      info,
    );
  }

  late final _duckdb_init_get_column_countPtr =
      _lookup<ffi.NativeFunction<idx_t Function(duckdb_init_info)>>(
          'duckdb_init_get_column_count');
  late final _duckdb_init_get_column_count = _duckdb_init_get_column_countPtr
      .asFunction<int Function(duckdb_init_info)>();

  int duckdb_init_get_column_index(
    duckdb_init_info info,
    int column_index,
  ) {
    return _duckdb_init_get_column_index(
      info,
      column_index,
    );
  }

  late final _duckdb_init_get_column_indexPtr =
      _lookup<ffi.NativeFunction<idx_t Function(duckdb_init_info, idx_t)>>(
          'duckdb_init_get_column_index');
  late final _duckdb_init_get_column_index = _duckdb_init_get_column_indexPtr
      .asFunction<int Function(duckdb_init_info, int)>();

  void duckdb_init_set_max_threads(
    duckdb_init_info info,
    int max_threads,
  ) {
    return _duckdb_init_set_max_threads(
      info,
      max_threads,
    );
  }

  late final _duckdb_init_set_max_threadsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(duckdb_init_info, idx_t)>>(
          'duckdb_init_set_max_threads');
  late final _duckdb_init_set_max_threads = _duckdb_init_set_max_threadsPtr
      .asFunction<void Function(duckdb_init_info, int)>();

  void duckdb_init_set_error(
    duckdb_init_info info,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _duckdb_init_set_error(
      info,
      error,
    );
  }

  late final _duckdb_init_set_errorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(duckdb_init_info,
              ffi.Pointer<ffi.Char>)>>('duckdb_init_set_error');
  late final _duckdb_init_set_error = _duckdb_init_set_errorPtr
      .asFunction<void Function(duckdb_init_info, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Void> duckdb_function_get_extra_info(
    duckdb_function_info info,
  ) {
    return _duckdb_function_get_extra_info(
      info,
    );
  }

  late final _duckdb_function_get_extra_infoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              duckdb_function_info)>>('duckdb_function_get_extra_info');
  late final _duckdb_function_get_extra_info =
      _duckdb_function_get_extra_infoPtr
          .asFunction<ffi.Pointer<ffi.Void> Function(duckdb_function_info)>();

  ffi.Pointer<ffi.Void> duckdb_function_get_bind_data(
    duckdb_function_info info,
  ) {
    return _duckdb_function_get_bind_data(
      info,
    );
  }

  late final _duckdb_function_get_bind_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              duckdb_function_info)>>('duckdb_function_get_bind_data');
  late final _duckdb_function_get_bind_data = _duckdb_function_get_bind_dataPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(duckdb_function_info)>();

  ffi.Pointer<ffi.Void> duckdb_function_get_init_data(
    duckdb_function_info info,
  ) {
    return _duckdb_function_get_init_data(
      info,
    );
  }

  late final _duckdb_function_get_init_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              duckdb_function_info)>>('duckdb_function_get_init_data');
  late final _duckdb_function_get_init_data = _duckdb_function_get_init_dataPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(duckdb_function_info)>();

  ffi.Pointer<ffi.Void> duckdb_function_get_local_init_data(
    duckdb_function_info info,
  ) {
    return _duckdb_function_get_local_init_data(
      info,
    );
  }
